add donate statistic
