# docs/api.yml
@@ -1051,6 +1051,27 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/DonateTxRes'
+  /donations/statistics:
+    post:
+      tags: [ Donations ]
+      summary: Get donate statistics transactions
+      security:
+        - BearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GetDonateStatsRequest'
+      responses:
+        '200':
+          description: Donate statistics
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/StatisticsResult'
   /wallets/self:
     get:
       tags: [ Wallets ]
@@ -1423,5 +1444,27 @@ components:
       properties:
         title:
           type: string
+    GetDonateStatsRequest:
+      type: object
+      required:
+        - from_time
+        - to_time
+        - group_by
+      properties:
+        from_time:
+          type: string
+          format: date
+        to_time:
+          type: string
+          format: date
+        group_by:
+          type: string
+    StatisticsResult:
+      type: object
+      properties:
+        time_period:
+          type: string
+        total_amount:
+          type: int64
 security:
   - BearerAuth: []
