# donation-service/internal/model/StatisticResult.go
@@ -1,0 +1,6 @@
+package model
+
+type StatisticResult struct {
+	TimePeriod  string `json:"time_period"`
+	TotalAmount int64  `json:"total_amount"`
+}
